--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-spring.data.mongodb.database = ${env.MONGO_DATABASE}
-spring.data.mongodb.uri= mongodb+srv://${env.MONGO_USER}:${env.MONGO_PASSWORD}@${env.MONGO_CLUSTER}
+spring.data.mongodb.database = ST-api-db
+spring.data.mongodb.uri= mongodb+srv://oswin9089:E0EMPP5WfD8mULp5@cluster0.wumnqwy.mongodb.net
