--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.data.mongodb.uri= mongodb+srv://oswin9089:E0EMPP5WfD8mULp5@cluster0.wumnq
 
 spring.mail.host= smtp.gmail.com
 spring.mail.port= 587
-spring.mail.username= jtc93125@gmail.com
-spring.mail.password= luxw ctrn qwuc llxl
+spring.mail.username= stockanalyzer2024@gmail.com
+spring.mail.password= aqwx fisb vleu wxqg
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
