--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,14 @@
-spring.data.mongodb.database = ST-api-db
-spring.data.mongodb.uri= mongodb+srv://oswin9089:E0EMPP5WfD8mULp5@cluster0.wumnqwy.mongodb.net
+spring.data.mongodb.database = system-db
+spring.data.mongodb.uri= mongodb+srv://OswinChen:poqw%40lkas1111@stsamember.rbneu.mongodb.net/
 
-spring.mail.host= smtp.gmail.com
-spring.mail.port= 587
-spring.mail.username= stockanalyzer2024@gmail.com
-spring.mail.password= aqwx fisb vleu wxqg
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=jtc93125@gmail.com
+spring.mail.password=zgfq pbjg kbmt evju
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+
