--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,9 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 
-spring.data.redis.host=localhost
-spring.data.redis.port=6379
+#spring.data.redis.host=localhost
+#spring.data.redis.port=6379
 
+spring.data.redis.host=redis-13861.c302.asia-northeast1-1.gce.redns.redis-cloud.com
+spring.data.redis.port=13861
+spring.data.redis.password=D0Z2NBgmlDzMFqK5rasEFY2cbzlnPs79
