--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,7 @@ spring.data.redis.host=redis-13861.c302.asia-northeast1-1.gce.redns.redis-cloud.
 spring.data.redis.port=13861
 spring.data.redis.password=D0Z2NBgmlDzMFqK5rasEFY2cbzlnPs79
 
+spring.servlet.multipart.max-file-size=2560KB
+spring.servlet.multipart.max-request-size=2560KB
+
+
