--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 spring.data.mongodb.database = system-db
-spring.data.mongodb.uri= mongodb+srv://OswinChen:poqw%40lkas1111@stsamember.rbneu.mongodb.net/
+spring.data.mongodb.uri=mongodb+srv://stsatw:STSApw_0427@stsamember.qlyqk.mongodb.net/
+
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=jtc93125@gmail.com
-spring.mail.password=zgfq pbjg kbmt evju
+spring.mail.username=stsa.external@gmail.com
+spring.mail.password=tgnp yavr ozzh nqic
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
@@ -12,9 +13,9 @@ spring.mail.properties.mail.smtp.starttls.required=true
 #spring.data.redis.host=localhost
 #spring.data.redis.port=6379
 
-spring.data.redis.host=redis-13861.c302.asia-northeast1-1.gce.redns.redis-cloud.com
-spring.data.redis.port=13861
-spring.data.redis.password=D0Z2NBgmlDzMFqK5rasEFY2cbzlnPs79
+spring.data.redis.host=redis-12259.c278.us-east-1-4.ec2.redns.redis-cloud.com
+spring.data.redis.port=12259
+spring.data.redis.password=XO5FzVy1xt80FjtIGoK27IU3FS5ldsdv
 
 spring.servlet.multipart.max-file-size=2560KB
 spring.servlet.multipart.max-request-size=2560KB
